@@ -1,8 +1,9 @@
-@comment $NetBSD: PLIST,v 1.5 2003/09/23 22:00:51 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.6 2004/01/04 17:26:20 xtraeme Exp $
 bin/xchat
 bin/xchat-text
 share/applications/xchat.desktop
 ${PKGLOCALEDIR}/locale/am/LC_MESSAGES/xchat.mo
+${PKGLOCALEDIR}/locale/az/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/ca/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/de/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/el/LC_MESSAGES/xchat.mo
@@ -13,10 +14,12 @@ ${PKGLOCALEDIR}/locale/fr/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/ja/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/lt/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/lv/LC_MESSAGES/xchat.mo
+${PKGLOCALEDIR}/locale/mk/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/ms/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/nl/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/no/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/pt/LC_MESSAGES/xchat.mo
+${PKGLOCALEDIR}/locale/ru/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/sk/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/sl/LC_MESSAGES/xchat.mo
 ${PKGLOCALEDIR}/locale/sr/LC_MESSAGES/xchat.mo
