@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5294 2004/03/23 07:53:10 xtraeme Exp $
+$NetBSD: CHANGES,v 1.5295 2004/03/24 11:56:35 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1513,3 +1513,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated apache2 to 2.0.49 [reed 2004-03-22]
 	Updated acpi-iasl to 20040311 [xtraeme 2004-03-23]
 	Updated XaoS to 3.0nb1 [wiz 2004-03-24]
+	Updated xchat2 to 2.0.8 [xtraeme 2004-03-24]
